# tgd

./: .env.example  .gitignore  README.md  file_version_info.txt  main.py  pyproject.toml  tgd.py  tgd.spec  utils.py  verify.py  verify.spec  verify_file_version_info.txt
TelethonFakeTLS/: Connection.py
TelethonFakeTLS.bak/FakeTLS/: FakeTLSHello.py
TelethonFakeTLS/FakeTLS/: FakeTLSHello.py  TLSInOut.py
