[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tgd"
version = "1.1.0"
description = "Fast Telegram Media Downloader with parallel downloads and integrity verification."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "User" }
]
dependencies = [
    "telethon==1.41.2",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
    "python-socks[asyncio]>=2.4.4",
]

[project.optional-dependencies]
# pip install tgd[fast] — ускорение AES + многопоточная загрузка тяжёлых файлов
fast = [
    "cryptg>=0.5",
    "cryptography>=41.0",
    "FastTelethonhelper==1.0.7",
]
# pip install tgd[verify] — проверка целостности медиафайлов
verify = [
    "Pillow>=10.0",
    "av>=12.0",
]

[project.scripts]
tgd = "tgd:main"
tgv = "verify:main"

[tool.setuptools]
py-modules = ["tgd", "verify", "utils"]
